# C-Cpp-Projects

./: README.md
Project 1 (Code Camp)/: CMakeLists.txt  CodeCamp.c  CodeCampTester.c
Project 10 (War)/: CMakeLists.txt  Card.cpp  Deck.cpp  Deck.h  Hand.cpp  Hand.h  playWar.cpp  test.cpp
Project 2 (Song)/: CMakeLists.txt  Song.c.c
Project 3 (Rocketship)/: CMakeLists.txt  Rocketship.c
Project 4 (Parameters, Strings, and Ciphers)/: CMakeLists.txt  cipher.c
Project 5 (String ADT)/: CMakeLists.txt  Proj5Test.c  String.c  String.h
Project 5 (String ADT)/feedback/: grade_report.txt  results.xml  run.txt  valgrind_report.txt
Project 6  (Polynomial Module)/: CMakeLists.txt  Poly.c  Poly.h  Proj6Test.c
Project 7 (Recursion)/: CMakeLists.txt  Recursive.c  Recursive.h  RecursiveTester.c
Project 8 (C++ Warmup)/: CMakeLists.txt  Makefile  Proj8TestCases.cpp  StringPlusPlus.cpp  StringPlusPlus.h  StringPlusPlusTester.cpp
Project 9 (Evil Hangman)/: CMakeLists.txt  EvilHangmanGame.cpp  EvilHangmanGame.h  RunEvilHangman.cpp
Project 9 (Evil Hangman)/dictionaries/: smallDictionary.txt
Project1/: Project1.cpp  main.cpp
SpellChecker/: Project1.cpp
